2007-10-11  Don Allingham  <don@gramps-project.org>
	* src/DisplayState.py: fix callback references
	* src/DbState.py: fix callback references

2007-10-12 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Filters/_FilterParser.py: avoid unknown filters crashing
	* src/Filters/Rules/Person/__init__.py: remove private filter list and register, not used.

2007-10-11 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/gen/db/base.py: allow check without gid creation on all objects
	* src/GrampsDbUtils/_ReadXML.py: on reference read, don't create gid.
	This also patches a privacy setting error on placeobj in place tag section

2007-10-11 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DateHandler/__init__.py: use portuguese date handler

2007-10-11  Don Allingham  <don@gramps-project.org>
	* src/gen/db/base.py:
	* src/GrampsDb_GrampsDbWriteXML.py:
	* src/gen/db/__init__.py: fix callback call

2007-10-10 Duarte Loreto <happyguy_pt@hotmail.com>
	* src/DateHandler/_Date_pt.py: portugese datehandler accompanying translation
	* po/POTFILES.in: new file in POTFILE
	* src/DateHandler/Makefile.am: add new file for distribution

2007-10-09  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/Makefile.am: update
	* src/gen/db/Makefile.am: update
	* src/gen/lib/primaryobj.py: remove MarkupText dependency
	* src/Makefile.am: remove RelLib
	* po/POTFILES.in: update

2007-10-09  Alex Roitman  <shura@gramps-project.org>
	* configure.in: remove obsolete RelLib/Makefile.in

2007-10-09 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/gen/db/base.py: allow not to create gramps_id on add
	* src/GrampsDbUtils/_ReadXML.py: on sourceref, don't create gramps_id
	* src/GrampsDb/_GrampsInMemDB.py: remove gid from memory map only if not None

2007-10-09 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_GrampsInMemDB.py: correctly store global name grouping
	* src/GrampsDb/_GrampsBSDDB.py: correctly store global name grouping