@@ -1,3 +1,6 @@
+2007-10-12 Benny Malengier <benny.malengier@gramps-project.org> 
+	* src/gen/db/dbdir.py: do name group change from GrampsBSDDB to dbdir.
+
 2007-10-11  Don Allingham  <don@gramps-project.org>
 	* src/DisplayState.py: fix callback references
 	* src/DbState.py: fix callback references
